--- a/public/back/css/common.css
+++ b/public/back/css/common.css
@@ -2,7 +2,9 @@
 .mt150{
     margin-top:150px;
 }
-
+.mb20{
+    margin-bottom: 20px;
+}
 .lt_panel h4{
     text-align: center;
 }
@@ -27,9 +29,10 @@ a:link,a:visited,a:hover,a:active{
     width: 180px;
     height: 100%;
     background-color: #222d32;
-    position: absolute;
+    position: fixed;
     left: 0;
     transition: all 1s;
+    z-index: 999;
 }
 .lt_aside.now{
     left: -180px;
@@ -80,6 +83,7 @@ a:link,a:visited,a:hover,a:active{
 .lt_main{
     padding-left:180px;
     transition: all 1s;
+    padding-top: 70px;
 }
 .lt_main.now{
     padding-left: 0;
@@ -88,8 +92,18 @@ a:link,a:visited,a:hover,a:active{
     height: 50px;
     line-height: 50px;
     background-color: #3c8dbc;
-    padding: 0 20px;
+    padding: 0 20px 0 200px;
     margin-bottom: 20px;
+    position: fixed;
+    width: 100%;
+    left: 0;
+    top: 0;
+    z-index: 998;
+    transition: all 1s;
+
+}
+.lt_header.now{
+    padding-left: 20px;
 }
 .lt_header a{
     color: #fff;
@@ -101,4 +115,26 @@ a:link,a:visited,a:hover,a:active{
     height: 400px;
 }
 
-
+.fileupload_box{
+    width: 100px;
+    height: 34px;
+    line-height: 34px;
+    position: relative;
+}
+.fileupload_box button{
+    width: 100%;
+    height: 100%;
+}
+.fileupload_box:hover button{
+    color: #333;
+    background-color: #e6e6e6;
+    border-color: #adadad;
+}
+.fileupload_box input{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    opacity: 0;
+}
