--- a/public/front/css/common.css
+++ b/public/front/css/common.css
@@ -18,7 +18,7 @@ img{
 	max-width: 640px;
 	min-width: 320px;
 	margin: 0 auto;
-	background-color: skyblue;
+	/*background-color: skyblue;*/
 	padding: 45px 0 55px 0;
 }
 .lt_content{
@@ -106,6 +106,10 @@ img{
 	padding: 10px;
 	margin-top: 10px;
 }
+.lt_product .item p {
+  margin-top: 10px;
+  height: 40px;
+}
 .lt_product .item:nth-child(odd){
 	margin-right: 4%;
 }
@@ -114,4 +118,45 @@ img{
 }
 .lt_product .item p span:last-child{
 	text-decoration: line-through;
+}
+
+
+.lt_search{
+	padding: 10px;
+	position: relative;
+}
+.lt_search input{
+	width: 100%;
+	height: 34px;
+	border: 1px solid #007aff;
+	font-size: 12px;
+	border-radius: 5px;
+	margin: 0;
+}
+.lt_search button{
+	position: absolute;
+	top: 10px;
+	right: 10px;
+	border-radius: 0 5px 5px 0;
+}
+
+.loading{
+	width: 40px;
+	height: 40px;
+	border: 3px solid #069;
+	position: absolute;
+	left: 50%;
+	transform: translateX(-50%);
+	top: 200px;
+
+	animation:zhuan 1s infinite ease-in-out;
+}
+
+@keyframes zhuan{
+	from{
+		transform: translateX(-50%) rotate(0deg);
+	}
+	to{
+		transform: translateX(-50%) rotate(360deg);
+	}
 }
